<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/image_register" />
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_box_rounded_red"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dang_ky_uppercase"
            android:fontFamily="@font/notop_sans_regular"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editText_username_signup"
            android:layout_width="285sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_edit_text_rounded"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="0dp"
            android:paddingBottom="15dp"
            android:textColorHint="#78909C"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_password_signup"
            android:layout_width="285sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:background="@drawable/bg_edit_text_rounded"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="0dp"
            android:paddingBottom="15dp"
            android:textColorHint="#78909C"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_password_signup_confirm"
            android:layout_width="285sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:background="@drawable/bg_edit_text_rounded"
            android:hint="@string/password_confirm_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="0dp"
            android:paddingBottom="15dp"
            android:textColorHint="#78909C"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_signup_signup"
            android:layout_width="285sp"
            android:layout_height="wrap_content"
            android:text="@string/dang_ky"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@drawable/bg_button_main_function"
            android:textColor="@color/white"
            android:fontFamily="@font/notop_sans_regular"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/button_login_signup"
            android:layout_width="285sp"
            android:layout_height="wrap_content"
            android:text="@string/dang_nhap"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@drawable/bg_button_sub_function"
            android:textColor="@color/white"
            android:fontFamily="@font/notop_sans_regular"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:layout_marginBottom="45dp"/>
    </LinearLayout>
</LinearLayout>