<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:background="@drawable/bg_box_rounded_red"
        android:layout_margin="5dp"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/order"
            android:layout_marginStart="5sp"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_marginStart="10sp"
            android:layout_width="210sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/tvDateMakeOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_date"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/yellow"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/tvOrderPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/money_text"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tvOrderAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/yellow"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/tvOrderStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/status"
                android:textColor="@color/white"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnConfirmOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:text="@string/confirm_delivery"/>
    </LinearLayout>
</LinearLayout>
